[package]
name = "hyperprocess_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", rev = "e8b065179ce5d15893a23142416e59c87e0f31f6", features = ["hyperapp"] }
