[package]
name = "hyperprocess_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", rev = "4f7c7132c5cf79c9f348d7b303b7093fa5a9cca2", features = ["hyperapp"] }
