[package]
name = "hyperapp_macro"
authors = ["Sybil Technologies AG"]
version = "0.1.2"
edition = "2021"
description = "The macro for async, handler-based Hyperware Hyperapps."
homepage = "https://hyperware.ai"
repository = "https://github.com/hyperware-ai/hyperapp_macro"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", features = ["hyperapp"], rev = "2453cc6" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
